# dialekt

./: README.md
dialekt/: app.py  pyproject.toml
