[tool.poetry]
name = "dialekt"
version = "0.1.0"
description = ""
authors = ["Kari Nordholm <kari.kj.no88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
